--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <div class="container mt-3">
     <h5>用户名</h5>
-    <form action="#" class="was-validated">
+    <div action="#" class="was-validated">
     <div class="input-group mb-3">
         <input type="text" class="form-control" id="username" placeholder="请输入用户名" required>
 
@@ -28,7 +28,7 @@
         <div class="valid-feedback">有效的。</div>
         <div class="invalid-feedback">请填写此字段。</div>
     </div>
-    </form>
+    </div>
     <div class="row">
         <div class="col-sm-6">
             <div onclick="onclickGroup(this)">
