修改返回为6位，并且添加位置为随机

--- a/index.html
+++ b/index.html
@@ -240,10 +240,10 @@
         let wzad = "⁠"
         let wzios = "⁠"
 
-        let smad = "⁠"
-        let smios = "⁠"
+        let smad = ""
+        let smios = "ؘ"
 
-        let lolad = "⁠"
+        let lolad = "゗"
 
 
         $("#wzad1").val(splicingValue(value, wzad));
