修改返回为6位，并且添加位置为随机

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="col-sm-6">
             <div onclick="onclickGroup(this)">
                 <h5>
-                    <button class="btn btn-success" type="button">召唤安卓 点此 一键复制</button>
+                    <button class="btn btn-success" type="button">王者安卓 点此 一键复制</button>
                 </h5>
             </div>
             <div class="row">
@@ -271,7 +271,6 @@
         let smios = smiosName();
 
         let lolad = loladName();
-
 
         $("#wzad1").val(splicingValue(value, wzadName()));
         $("#wzad2").val(splicingValue(value, wzadName()));
