--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
     function setValue(value) {
 
         let wzad = ['⁠', '⁣', '⁠', '⁠', '', '', ''];
-        let wzios = ['⁠', '⁣', '⁠', '⁠'];
+        let wzios = ['⁣', ' ', '⁣', '​', '⁠'];
 
         let smad = ['', '', ''];
         let smios = ['ؘ', 'ؘ'];
