--- a/index.html
+++ b/index.html
@@ -244,8 +244,9 @@
 
     function setValue(value) {
 
-        let wzad = ['⁠', '⁣', '⁠', '⁠', '', '', ''];
-        let wzios = ['⁣', ' ', '⁣', '​', '⁠'];
+        // let wzad = ['⁠', '⁣', '⁠', '⁠', '', '', ''];
+        let wzad =  ['', '', '', '⁠', '⁠',' ', '⁠', '⁣', '', '', '', '　'];
+        let wzios = ['', '', '', '⁠', '⁠',' ', '⁠', '⁣', '', '', '', '　'];
 
         let smad = ['', '', ''];
         let smios = ['ؘ', 'ؘ'];
